Cache evaluation of client roles with dots for role mapper
Closes #43726

Signed-off-by: Pedro Ruivo <1492066+pruivo@users.noreply.github.com>